updated: higher z-index for navbar to prevent code header buttons overflow

--- a/client/app/page.module.css
+++ b/client/app/page.module.css
@@ -1,7 +1,7 @@
 .navbar {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: space-between;
